--- a/src/Hjmos.BaseControls/Themes/Styles/ScrollViewer.xaml
+++ b/src/Hjmos.BaseControls/Themes/Styles/ScrollViewer.xaml
@@ -5,4 +5,5 @@
         <ResourceDictionary Source="Base/ScrollViewerBaseStyle.xaml"/>
     </ResourceDictionary.MergedDictionaries>
     <Style TargetType="ScrollViewer" BasedOn="{StaticResource ScrollViewerNativeBaseStyle}"/>
+    <Style BasedOn="{StaticResource ScrollViewerBaseStyle}" TargetType="controls:ScrollViewer"/>
 </ResourceDictionary>
