--- a/src/Hjmos.BaseControls/Themes/Basic/Basic.xaml
+++ b/src/Hjmos.BaseControls/Themes/Basic/Basic.xaml
@@ -2,6 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     >
     <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="../Basic/Colors/Colors.xaml"/>
         <ResourceDictionary Source="../Basic/Brushes.xaml"/>
         <ResourceDictionary Source="../Basic/Geometries.xaml"/>
         <ResourceDictionary Source="../Basic/Fonts.xaml"/>
