--- a/src/Hjmos.BaseControls/Themes/Styles/ComboBox.xaml
+++ b/src/Hjmos.BaseControls/Themes/Styles/ComboBox.xaml
@@ -4,8 +4,8 @@
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Base/ComboBoxBaseStyle.xaml"/>
     </ResourceDictionary.MergedDictionaries>
-
     <Style x:Key="ComboBoxMemoStyle"  BasedOn="{StaticResource ComboBoxMemoBaseStyle}" TargetType="hc:MemoBox" />
     <Style x:Key="ComboBoxMemoExtentStyle"  BasedOn="{StaticResource ComboBoxMemoExtentBaseStyle}" TargetType="hc:MemoBox" />
     <Style BasedOn="{StaticResource ComboBoxBaseStyle}" TargetType="ComboBox"/>
+    <Style x:Key="ComboBoxExtend" BasedOn="{StaticResource ComboBoxExtendBaseStyle}" TargetType="ComboBox"/>
 </ResourceDictionary>
