--- a/src/Hjmos.BaseControls/Themes/Styles/CalendarWithClock.xaml
+++ b/src/Hjmos.BaseControls/Themes/Styles/CalendarWithClock.xaml
@@ -27,13 +27,13 @@
                             </Grid.ColumnDefinitions>
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="50"/>
-                                <RowDefinition/>
+                                <RowDefinition Height="*"/>
                                 <RowDefinition Height="Auto"/>
                             </Grid.RowDefinitions>
                             <Border Grid.ColumnSpan="2" Grid.Row="0" Height="50" VerticalAlignment="Top" Background="{Binding Path=(control:TitleElement.Background),RelativeSource={RelativeSource TemplatedParent}}"/>
                             <ContentPresenter Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" x:Name="PART_CalendarPresenter"/>
                             <ContentPresenter Grid.Column="1" Grid.Row="0" Grid.RowSpan="2" x:Name="PART_ClockPresenter"/>
-                            <Button Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Background="Blue" Visibility="{TemplateBinding ShowConfirmButton,Converter={StaticResource Boolean2VisibilityConverter}}" Name="PART_ButtonConfirm"  Content="确定" HorizontalAlignment="Center" Margin="0,0,0,19" Width="180" Height="50" VerticalAlignment="Bottom" Style="{StaticResource ButtonBaseStyle}"/>
+                            <Button Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" Background="{DynamicResource PrimaryBrush}" Visibility="{TemplateBinding ShowConfirmButton,Converter={StaticResource Boolean2VisibilityConverter}}" Name="PART_ButtonConfirm"  Content="确定" HorizontalAlignment="Center" Margin="0,0,0,19" Width="180" Height="50" VerticalAlignment="Bottom" Style="{StaticResource ButtonBaseStyle}"/>
                         </Grid>
                     </Border>
                 </ControlTemplate>
